fix: tab alignment

--- a/src/style.css
+++ b/src/style.css
@@ -47,9 +47,9 @@ header {
   width: 200px;
   font: bold 2rem Arial;
   user-select: none;
-  text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: left;
 }
 
 #sidebar-filter-tabs *:hover,
